# PyFluff

./: .gitignore  DEBUGGING.md  DEVELOPMENT.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  install.sh  known_furbies.json.example  pyproject.toml  requirements-dev.txt  requirements.txt  sing.py  test_connection.py  test_server.py
.github/: copilot-instructions.md
docs/: README.md  actionlist.md  actions.md  bluetooth.md  connectworld.md  dlcformat.md  f2f-connectivity.md  flashdlc.md  generalplus.md  names.md  nordic.md
docs/images/: pyfluff.ai
examples/: README.md  action_sequence.py  basic_control.py  custom_dlc.py  f2f_connection.py  mood_monitor.py
pyfluff/: __init__.py  __main__.py  cli.py  dlc.py  furby.py  furby_cache.py  models.py  protocol.py  server.py
scripts/: README.md  generate_actions_js.py  test_f2f_connection.py
tests/: __init__.py  test_protocol.py
web/: actions.js  app.js  index.html  names.js  songs.js  style.css
